# yorutsuke-v2

./: .gitignore  AZURE_DI_DEPLOYMENT.md  AZURE_DI_计划流程图.txt  CHANGELOG_DEBUG_CONFIG.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  POTENTIAL_ISSUES.md  PUSH_PULL_SOLUTION.md  QUICK_REFERENCE.md  README.md  SAFETY_FIXES_APPLIED.md  SAFETY_QUICK_REFERENCE.md  SAFETY_TEST_PLAN.md  SINGLE_OPERATION_PER_SLOT.md  STATUS_CHECK.sh  SYNC_LOOP_TIMELINE.sh  SYNC_SCHEDULE.txt  TRAIN_MODE_SYNC.md  package-lock.json
.claude/: ARCHITECTURE-REVIEW.md  DESIGN-SYSTEM-COMPLETION-SUMMARY.md  DESIGN-SYSTEM-INDEX.md  FEATURE-WORKFLOW-GUIDE.md  FINAL-CHECKLIST.md  ICON-MIGRATION-REFERENCE.md  IMPLEMENTATION-COMPLETE-#99.md  INBOX.md  ISSUE-124-OPTIMIZATION-COMPLETE.md  ISSUE-124-STATUS.md  ISSUE-128-AUDIT-REPORT.md  ISSUE-131-AUDIT-REPORT.md  ISSUE-131-PHASE2-3-COMPLETION.md  ISSUE-132-TAB-VIEW-HEADER-STANDARDIZATION.md  MEMORY.md  MIGRATION_TODO_MEMORY_PLAN.md  OPEN-QUESTIONS-CLARIFIED.md  QUICK-NOTES.md  QUICK-START.md  README.md  TODO.md  WORKFLOW-QUICK-REFERENCE.md  WORKFLOW.md  batch-orchestrator-COMPLETED.md  batch-orchestrator-PILLAR-FIXES.md  batch-result-handler-PLAN.md  design-system-integration-guide.md  design-system-issues.md  settings.json
.github/: ISSUE_DRAFT_109.md
.prot/: CHEATSHEET.md  STRUCTURE.md
admin/: .env  .env.example  package-lock.json  package.json
app/: .env.azure-di  .env.example  .env.local.example  .env.mock  .gitignore  DEBUG.md  (+9 more)
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
(+703 files in other folders)
